Fixed: menu bg fakes transparency to stay visible

--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -1,4 +1,9 @@
 ﻿/* MudBlaozr */
+/*override*/
+.mud-theme-transparent {
+   background-color: #fafafa !important;
+}
+
 .mudblazor-brand {
     font-size: 1.7rem;
     font-weight: 300;
